# slumbercube

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PRD.md  README.md  ROADMAP.md  partitions.csv  partitions_ota.csv  read_crash.py  read_serial.py  read_serial2.py  read_serial3.py  sdkconfig.defaults
.agent_history/: 1777370189762_n3kuak_info.json
.cache/clangd/index/: actions.h.4442FAC424974660.idx  fonts.h.4D73C0CE4B1BBE1D.idx  lvgl_adapter.c.0347568091E8C6E6.idx  lvgl_adapter.h.EF359501C7775C17.idx  main.c.A73724742FC6DF83.idx  screens.c.72E2F2C4A88373FF.idx  screens.h.C2F8D8D71C20292C.idx  ssd1322_driver.c.AD989B9DB9B5005A.idx  ssd1322_driver.h.C9DE907758394FE7.idx  styles.c.3652CF3F7F4F3E19.idx  styles.h.8CC7DAB21A91508B.idx  ui.c.A84A9098E5005BAD.idx  ui.h.0942C708D373A1F9.idx  ui.h.F65D0DC84E138CB6.idx  ui_wrapper.c.43AEEF322E7B3DB2.idx  vars.h.0F33685BDEAF076A.idx
assets/hardware/: 安睡小方.shapr  安睡小方.step
builds/2.0/: RELEASE.md
builds/2.1/: RELEASE.md
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/pcf85063/: CMakeLists.txt  pcf85063.c  pcf85063_bcd.c
components/pcf85063/include/: pcf85063.h  pcf85063_internal.h
components/shtc3/: CMakeLists.txt  shtc3.c
components/shtc3/include/: shtc3.h
docs/plans/: 2026-07-12-001-feature-pixel-pet-plan.md  pet-simulator.html
docs/solutions/best-practices/: esp32-deep-sleep-wake-display-optimization.md
main/: CMakeLists.txt  Kconfig.projbuild  agent_config.c  agent_config.h  app_fsm.h  audio_player_wrapper.c  audio_player_wrapper.h  clock_screen.c  clock_screen.h  config_screen.c  config_screen.h  event_router.c  event_router.h  font_digital.c  font_digital.h  font_station.c  font_station.h  font_weather.c  font_weather.h  fonts_loader.c  fonts_loader.h  idf_component.yml  loading_img.c  loading_img.h  lv_conf.h  lvgl_adapter.c  lvgl_adapter.h  main.c  miniz_common.h  miniz_tdef.h  miniz_zip.h  ota.c  ota.h  ssd1322_driver.c  ssd1322_driver.h  ui.h  ui_wrapper.c  weather_chart.c  weather_chart.h  weather_icons.c  (+7 more)
main/regions/: audio_fsm.c  audio_fsm.h  display_fsm.c  display_fsm.h  net_fsm.c  net_fsm.h  sys_fsm.c  sys_fsm.h  wake_fsm.c  wake_fsm.h
main/ui/: actions.h  fonts.h  images.h  screens.c  screens.h  structs.h  styles.c  styles.h  ui.c  ui.h  vars.h
release/v1.0/: README.md
tests/: Makefile  test_agent_config.c  test_audio_fsm.c  test_display_fsm.c  test_event_router.c  test_net_fsm.c  test_sys_fsm.c  test_wake_fsm.c  test_wifi_creds.c
tools/: extract_fonts.py
