idf_component_register(SRCS "main.c"
                            "ssd1322_driver.c"
                            "lvgl_adapter.c"
                            "ui_wrapper.c"
                            "wifi.c"
                            "weather_service.c"
                            "weather_chart.c"
                            "loading_img.c"
                            "weather_icons.c"
                            "font_weather.c"
                            "font_digital.c"
                            "ui/ui.c"
                            "ui/screens.c"
                            "ui/styles.c"
                    INCLUDE_DIRS "."
                    REQUIRES lvgl__lvgl driver esp_netif esp_wifi lwip nvs_flash esp_http_client json)